--- a/ColorPicker/PreferencesController.xib
+++ b/ColorPicker/PreferencesController.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">0</int>
+		<int key="IBDocument.SystemTarget">1070</int>
 		<string key="IBDocument.SystemVersion">11B26</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1900</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1934</string>
 		<string key="IBDocument.AppKitVersion">1138</string>
 		<string key="IBDocument.HIToolboxVersion">566.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">1900</string>
+			<string key="NS.object.0">1934</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>NSPopUpButton</string>
@@ -59,6 +59,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{75, 147}, {136, 17}}</string>
 							<reference key="NSSuperview" ref="579521538"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="953804436"/>
 							<string key="NSReuseIdentifierKey">_NS:3935</string>
 							<bool key="NSEnabled">YES</bool>
@@ -98,6 +99,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{76, 51}, {188, 18}}</string>
 							<reference key="NSSuperview" ref="579521538"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="632430646"/>
 							<string key="NSReuseIdentifierKey">_NS:238</string>
 							<bool key="NSEnabled">YES</bool>
@@ -128,6 +130,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{76, 23}, {224, 18}}</string>
 							<reference key="NSSuperview" ref="579521538"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:238</string>
 							<bool key="NSEnabled">YES</bool>
@@ -153,6 +156,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{17, 176}, {56, 17}}</string>
 							<reference key="NSSuperview" ref="579521538"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="890912462"/>
 							<string key="NSReuseIdentifierKey">_NS:3935</string>
 							<bool key="NSEnabled">YES</bool>
@@ -172,6 +176,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{17, 84}, {53, 17}}</string>
 							<reference key="NSSuperview" ref="579521538"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="1060005640"/>
 							<string key="NSReuseIdentifierKey">_NS:3935</string>
 							<bool key="NSEnabled">YES</bool>
@@ -191,6 +196,7 @@
 							<int key="NSvFlags">12</int>
 							<string key="NSFrame">{{78, 181}, {276, 5}}</string>
 							<reference key="NSSuperview" ref="579521538"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="345060115"/>
 							<string key="NSReuseIdentifierKey">_NS:1458</string>
 							<string key="NSOffsets">{0, 0}</string>
@@ -223,6 +229,7 @@
 							<int key="NSvFlags">12</int>
 							<string key="NSFrame">{{78, 88}, {276, 5}}</string>
 							<reference key="NSSuperview" ref="579521538"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="259229107"/>
 							<string key="NSReuseIdentifierKey">_NS:1458</string>
 							<string key="NSOffsets">{0, 0}</string>
@@ -247,6 +254,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{225, 141}, {100, 26}}</string>
 							<reference key="NSSuperview" ref="579521538"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="139660187"/>
 							<string key="NSReuseIdentifierKey">_NS:179</string>
 							<bool key="NSEnabled">YES</bool>
@@ -262,23 +270,7 @@
 								<string key="NSKeyEquivalent"/>
 								<int key="NSPeriodicDelay">400</int>
 								<int key="NSPeriodicInterval">75</int>
-								<object class="NSMenuItem" key="NSMenuItem" id="401829720">
-									<reference key="NSMenu" ref="494084656"/>
-									<string key="NSTitle">cmyk (240, 240, 240, 240)</string>
-									<string key="NSKeyEquiv"/>
-									<int key="NSMnemonicLoc">2147483647</int>
-									<int key="NSState">1</int>
-									<object class="NSCustomResource" key="NSOnImage" id="421738814">
-										<string key="NSClassName">NSImage</string>
-										<string key="NSResourceName">NSMenuCheckmark</string>
-									</object>
-									<object class="NSCustomResource" key="NSMixedImage" id="475429271">
-										<string key="NSClassName">NSImage</string>
-										<string key="NSResourceName">NSMenuMixedState</string>
-									</object>
-									<string key="NSAction">_popUpItemAction:</string>
-									<reference key="NSTarget" ref="186846319"/>
-								</object>
+								<nil key="NSMenuItem"/>
 								<bool key="NSMenuItemRespectAlignment">YES</bool>
 								<object class="NSMenu" key="NSMenu" id="494084656">
 									<string key="NSTitle">OtherViews</string>
@@ -289,8 +281,14 @@
 											<string key="NSKeyEquiv"/>
 											<int key="NSKeyEquivModMask">1048576</int>
 											<int key="NSMnemonicLoc">2147483647</int>
-											<reference key="NSOnImage" ref="421738814"/>
-											<reference key="NSMixedImage" ref="475429271"/>
+											<object class="NSCustomResource" key="NSOnImage" id="857830830">
+												<string key="NSClassName">NSImage</string>
+												<string key="NSResourceName">NSMenuCheckmark</string>
+											</object>
+											<object class="NSCustomResource" key="NSMixedImage" id="434332216">
+												<string key="NSClassName">NSImage</string>
+												<string key="NSResourceName">NSMenuMixedState</string>
+											</object>
 											<string key="NSAction">_popUpItemAction:</string>
 											<reference key="NSTarget" ref="186846319"/>
 										</object>
@@ -300,16 +298,36 @@
 											<string key="NSKeyEquiv"/>
 											<int key="NSKeyEquivModMask">1048576</int>
 											<int key="NSMnemonicLoc">2147483647</int>
-											<reference key="NSOnImage" ref="421738814"/>
-											<reference key="NSMixedImage" ref="475429271"/>
+											<reference key="NSOnImage" ref="857830830"/>
+											<reference key="NSMixedImage" ref="434332216"/>
 											<string key="NSAction">_popUpItemAction:</string>
 											<reference key="NSTarget" ref="186846319"/>
 										</object>
-										<reference ref="401829720"/>
+										<object class="NSMenuItem" id="268064417">
+											<reference key="NSMenu" ref="494084656"/>
+											<string key="NSTitle">HEX2 (ff0000)</string>
+											<string key="NSKeyEquiv"/>
+											<int key="NSKeyEquivModMask">1048576</int>
+											<int key="NSMnemonicLoc">2147483647</int>
+											<reference key="NSOnImage" ref="857830830"/>
+											<reference key="NSMixedImage" ref="434332216"/>
+											<string key="NSAction">_popUpItemAction:</string>
+											<reference key="NSTarget" ref="186846319"/>
+										</object>
+										<object class="NSMenuItem" id="401829720">
+											<reference key="NSMenu" ref="494084656"/>
+											<string key="NSTitle">cmyk (240, 240, 240, 240)</string>
+											<string key="NSKeyEquiv"/>
+											<int key="NSMnemonicLoc">2147483647</int>
+											<reference key="NSOnImage" ref="857830830"/>
+											<reference key="NSMixedImage" ref="434332216"/>
+											<string key="NSAction">_popUpItemAction:</string>
+											<reference key="NSTarget" ref="186846319"/>
+										</object>
 									</array>
 									<reference key="NSMenuFont" ref="473291212"/>
 								</object>
-								<int key="NSSelectedIndex">2</int>
+								<int key="NSSelectedIndex">-1</int>
 								<int key="NSPreferredEdge">1</int>
 								<bool key="NSUsesItemFromMenu">YES</bool>
 								<bool key="NSAltersState">YES</bool>
@@ -321,6 +339,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{75, 111}, {407, 17}}</string>
 							<reference key="NSSuperview" ref="579521538"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="608284740"/>
 							<string key="NSReuseIdentifierKey">_NS:3935</string>
 							<bool key="NSEnabled">YES</bool>
@@ -342,10 +361,11 @@
 					</array>
 					<string key="NSFrameSize">{378, 213}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="673984933"/>
 					<string key="NSReuseIdentifierKey">_NS:2836</string>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
+				<string key="NSScreenRect">{{-1920, 57}, {1920, 1080}}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
@@ -599,6 +619,7 @@
 							<reference ref="277480585"/>
 							<reference ref="12195002"/>
 							<reference ref="401829720"/>
+							<reference ref="268064417"/>
 						</array>
 						<reference key="parent" ref="186846319"/>
 					</object>
@@ -648,6 +669,11 @@
 						<reference key="object" ref="401829720"/>
 						<reference key="parent" ref="494084656"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">49</int>
+						<reference key="object" ref="268064417"/>
+						<reference key="parent" ref="494084656"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -683,20 +709,58 @@
 				<string key="39.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="48.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="49.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">48</int>
+			<int key="maxID">49</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">PreferencesController</string>
+					<string key="superclassName">NSWindowController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">controllerChanged:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">controllerChanged:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">controllerChanged:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="defaultFormat">NSPopUpButton</string>
+						<string key="openAtLogin">NSButton</string>
+						<string key="showColorPreview">NSButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="defaultFormat">
+							<string key="name">defaultFormat</string>
+							<string key="candidateClassName">NSPopUpButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="openAtLogin">
+							<string key="name">openAtLogin</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="showColorPreview">
+							<string key="name">showColorPreview</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PreferencesController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
-		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
-			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin.macosx</string>
-			<real value="0.0" key="NS.object.0"/>
-		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
