fixed a couple of issues.
Switched a format in settings and adjusted a label width

--- a/ColorPicker/PreferencesController.xib
+++ b/ColorPicker/PreferencesController.xib
@@ -97,7 +97,7 @@
 						<object class="NSButton" id="259229107">
 							<reference key="NSNextResponder" ref="579521538"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{76, 51}, {188, 18}}</string>
+							<string key="NSFrame">{{76, 51}, {284, 18}}</string>
 							<reference key="NSSuperview" ref="579521538"/>
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="632430646"/>
@@ -128,7 +128,7 @@
 						<object class="NSButton" id="632430646">
 							<reference key="NSNextResponder" ref="579521538"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{76, 23}, {224, 18}}</string>
+							<string key="NSFrame">{{76, 23}, {280, 18}}</string>
 							<reference key="NSSuperview" ref="579521538"/>
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView"/>
@@ -270,23 +270,7 @@
 								<string key="NSKeyEquivalent"/>
 								<int key="NSPeriodicDelay">400</int>
 								<int key="NSPeriodicInterval">75</int>
-								<object class="NSMenuItem" key="NSMenuItem" id="471288276">
-									<reference key="NSMenu" ref="494084656"/>
-									<string key="NSTitle">NSColor ([NSColor colorWithCalibratedRed:...)</string>
-									<string key="NSKeyEquiv"/>
-									<int key="NSMnemonicLoc">2147483647</int>
-									<int key="NSState">1</int>
-									<object class="NSCustomResource" key="NSOnImage" id="585429509">
-										<string key="NSClassName">NSImage</string>
-										<string key="NSResourceName">NSMenuCheckmark</string>
-									</object>
-									<object class="NSCustomResource" key="NSMixedImage" id="28591409">
-										<string key="NSClassName">NSImage</string>
-										<string key="NSResourceName">NSMenuMixedState</string>
-									</object>
-									<string key="NSAction">_popUpItemAction:</string>
-									<reference key="NSTarget" ref="186846319"/>
-								</object>
+								<nil key="NSMenuItem"/>
 								<bool key="NSMenuItemRespectAlignment">YES</bool>
 								<object class="NSMenu" key="NSMenu" id="494084656">
 									<string key="NSTitle">OtherViews</string>
@@ -297,8 +281,14 @@
 											<string key="NSKeyEquiv"/>
 											<int key="NSKeyEquivModMask">1048576</int>
 											<int key="NSMnemonicLoc">2147483647</int>
-											<reference key="NSOnImage" ref="585429509"/>
-											<reference key="NSMixedImage" ref="28591409"/>
+											<object class="NSCustomResource" key="NSOnImage" id="857830830">
+												<string key="NSClassName">NSImage</string>
+												<string key="NSResourceName">NSMenuCheckmark</string>
+											</object>
+											<object class="NSCustomResource" key="NSMixedImage" id="434332216">
+												<string key="NSClassName">NSImage</string>
+												<string key="NSResourceName">NSMenuMixedState</string>
+											</object>
 											<string key="NSAction">_popUpItemAction:</string>
 											<reference key="NSTarget" ref="186846319"/>
 										</object>
@@ -308,8 +298,8 @@
 											<string key="NSKeyEquiv"/>
 											<int key="NSKeyEquivModMask">1048576</int>
 											<int key="NSMnemonicLoc">2147483647</int>
-											<reference key="NSOnImage" ref="585429509"/>
-											<reference key="NSMixedImage" ref="28591409"/>
+											<reference key="NSOnImage" ref="857830830"/>
+											<reference key="NSMixedImage" ref="434332216"/>
 											<string key="NSAction">_popUpItemAction:</string>
 											<reference key="NSTarget" ref="186846319"/>
 										</object>
@@ -319,8 +309,8 @@
 											<string key="NSKeyEquiv"/>
 											<int key="NSKeyEquivModMask">1048576</int>
 											<int key="NSMnemonicLoc">2147483647</int>
-											<reference key="NSOnImage" ref="585429509"/>
-											<reference key="NSMixedImage" ref="28591409"/>
+											<reference key="NSOnImage" ref="857830830"/>
+											<reference key="NSMixedImage" ref="434332216"/>
 											<string key="NSAction">_popUpItemAction:</string>
 											<reference key="NSTarget" ref="186846319"/>
 										</object>
@@ -329,26 +319,35 @@
 											<string key="NSTitle">cmyk (240, 240, 240, 240)</string>
 											<string key="NSKeyEquiv"/>
 											<int key="NSMnemonicLoc">2147483647</int>
-											<reference key="NSOnImage" ref="585429509"/>
-											<reference key="NSMixedImage" ref="28591409"/>
+											<reference key="NSOnImage" ref="857830830"/>
+											<reference key="NSMixedImage" ref="434332216"/>
 											<string key="NSAction">_popUpItemAction:</string>
 											<reference key="NSTarget" ref="186846319"/>
 										</object>
-										<object class="NSMenuItem" id="334843687">
+										<object class="NSMenuItem" id="491963236">
 											<reference key="NSMenu" ref="494084656"/>
 											<string key="NSTitle">UIColor ([UIColor colorWithRed:1.0...)</string>
 											<string key="NSKeyEquiv"/>
 											<int key="NSMnemonicLoc">2147483647</int>
-											<reference key="NSOnImage" ref="585429509"/>
-											<reference key="NSMixedImage" ref="28591409"/>
+											<reference key="NSOnImage" ref="857830830"/>
+											<reference key="NSMixedImage" ref="434332216"/>
 											<string key="NSAction">_popUpItemAction:</string>
 											<reference key="NSTarget" ref="186846319"/>
 										</object>
-										<reference ref="471288276"/>
+										<object class="NSMenuItem" id="205047853">
+											<reference key="NSMenu" ref="494084656"/>
+											<string key="NSTitle">NSColor ([NSColor colorWithCalibratedRed:...)</string>
+											<string key="NSKeyEquiv"/>
+											<int key="NSMnemonicLoc">2147483647</int>
+											<reference key="NSOnImage" ref="857830830"/>
+											<reference key="NSMixedImage" ref="434332216"/>
+											<string key="NSAction">_popUpItemAction:</string>
+											<reference key="NSTarget" ref="186846319"/>
+										</object>
 									</array>
 									<reference key="NSMenuFont" ref="473291212"/>
 								</object>
-								<int key="NSSelectedIndex">5</int>
+								<int key="NSSelectedIndex">-1</int>
 								<int key="NSPreferredEdge">1</int>
 								<bool key="NSUsesItemFromMenu">YES</bool>
 								<bool key="NSAltersState">YES</bool>
@@ -641,8 +640,8 @@
 							<reference ref="12195002"/>
 							<reference ref="401829720"/>
 							<reference ref="268064417"/>
-							<reference ref="334843687"/>
-							<reference ref="471288276"/>
+							<reference ref="491963236"/>
+							<reference ref="205047853"/>
 						</array>
 						<reference key="parent" ref="186846319"/>
 					</object>
@@ -699,12 +698,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">50</int>
-						<reference key="object" ref="334843687"/>
+						<reference key="object" ref="491963236"/>
 						<reference key="parent" ref="494084656"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">51</int>
-						<reference key="object" ref="471288276"/>
+						<reference key="object" ref="205047853"/>
 						<reference key="parent" ref="494084656"/>
 					</object>
 				</array>
